--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -178,6 +178,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Funding Circle
 * Futurice
 * Fy!
+* Gaiwan
 * GetContented
 * GetSet
 * Gmaven
