--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,13 +22,25 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.11.1.1135 (Jun 16, 2022) [[v1.11.1.1135]]
+
+* Add `clj -Ttools install-latest` api function, examples:
+  * Install tool: `clj -Ttools install-latest :lib io.github.clojure/tools.deps.graph :as graph`
+  * Update tool:  `clj -Ttools install-latest :tool graph`
+* Fix regression with `clj -X:deps find-versions` from 1.11.1.1119
+* Output from `clj -X:deps find-versions` now provides :git/tag and :git/sha
+* Update to tools.tools v0.2.6
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.14.1205
+
 === 1.11.1.1129 (Jun 14, 2022) [[v1.11.1.1129]]
 
 * Fix directory context of `-X:deps prep` with transitive local deps
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.14.1194
 
 === 1.11.1.1124 (Jun 11, 2022) [[v1.11.1.1124]]
 
 * Fix bug in TDEPS-213 change
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.14.1189
 
 === 1.11.1.1119 (Jun 9, 2022) [[v1.11.1.1119]]
 
