--- a/content/news/2022/06/17/deref.adoc
+++ b/content/news/2022/06/17/deref.adoc
@@ -15,7 +15,7 @@ The Deref started in June 2021 so this month marks the first full year of this w
 
 We've been working on several things in the Clojure 1.12 stream and we are moving towards a 1.12.0-alpha1 release soon. I wrote up some of the stuff I've been working on in the https://insideclojure.org/2022/06/15/partitioning/[Efficient partitioning] post so I'll just point there. 
 
-Fogus has finished his work on cleaning up the policies around var interning and replacement and that should also be included (making I can coax him into writing that up in more detail, but see https://clojure.atlassian.net/browse/CLJ-2711[CLJ-2711] for now). This area was brought to light with the addition of `abs` in Clojure 1.11, which created a conflict in some existing *compiled* code - a scenario uncommon enough that we had not previously seen issues. This led to a lot of code archaeology, review of old "fixes" (one of which we are rolling back), and finally clarification of when vars can be replaced, and when warnings will happen. This took a long time but I think was really fruitful for all of us in defining the principles. While we have cast a pretty wide net in testing these changes, we rely on the community to really help us get broader coverage and find any issues when this is out in an alpha.
+Fogus has finished his work on cleaning up the policies around var interning and replacement and that should also be included (maybe I can coax him into writing that up in more detail, but see https://clojure.atlassian.net/browse/CLJ-2711[CLJ-2711] for now). This area was brought to light with the addition of `abs` in Clojure 1.11, which created a conflict in some existing *compiled* code - a scenario uncommon enough that we had not previously seen issues. This led to a lot of code archaeology, review of old "fixes" (one of which we are rolling back), and finally clarification of when vars can be replaced, and when warnings will happen. This took a long time but I think was really fruitful for all of us in defining the principles. While we have cast a pretty wide net in testing these changes, we rely on the community to really help us get broader coverage and find any issues when this is out in an alpha.
 
 I've also been doing a lot of web site cleanup on old issues and PRs and working on the getting started area (still a work in progress). More on that in the future. And big thanks to Dan De Aguiar for finding a way through some Github billing issues so that the web site auto builds work again. Some portion of our time every week goes to maintaining the Clojure infrastructure (web sites, JIRA, Jenkins, contributor agreements, etc) and we're trying to improve our efficiency there so we have more time for the good stuff!
 
