--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.11.1.1145 (Jun 21, 2022) [[v1.11.1.1145]]
+
+* `clj -Ttools install-latest` - refine how versions are filtered, sorted, and newest selected
+* Update to tools.tools v0.2.8
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.14.1212
+
 === 1.11.1.1139 (Jun 16, 2022) [[v1.11.1.1139]]
 
 * Add `clj -Ttools install-latest` api function, examples:
