Add Treasury Prime to companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -456,6 +456,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * TOYOKUMO
 * Trainline
 * T-Rank
+* Treasury Prime
 * TriOptima
 * Troy-West
 * Trucker Path
