--- a/content/news/2022/07/15/deref.adoc
+++ b/content/news/2022/07/15/deref.adoc
@@ -29,6 +29,7 @@ The Sci Cloj has been hard at work starting some new courses and groups - check 
 * https://dragan.rocks/articles/22/Clojure-Sound-4-Ctrl-Left-Pedal[Clojure Sound - 4 - Ctrl-Left-Pedal] - Dragan Djuric
 * https://medium.com/@rawad_56687/why-clojure-part-2-a-developer-on-boarding-perspective-56c209288072[Why Clojure? Part 2: A developer on-boarding perspective] - Rawad Assaf
 * https://smallsheds.garden/blog/clojure/2022/clj-10-the-mapify-function-of-clj-9-revisited/[(clj 10) The mapify function of (clj 9) revisited] - Joep Schuurkes
+* https://dev.to/quoll/how-fast-is-dc-1pak[How fast is dc?] - Paula Gearon
 
 == Libraries and Tools
 
