--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -375,6 +375,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Rio de Janeiro Botanical Garden
 * RJMetrics
 * Rōmr
+* Roam Research
 * Rocket Fuel
 * ROKT
 * Room Key
