--- a/content/news/2022/08/05/deref.adoc
+++ b/content/news/2022/08/05/deref.adoc
@@ -29,7 +29,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 New releases and tools this week:
 
-* https://github.com/uncomplicate/neanderthal[neanderthal] 0.1.0-alpha.1 - inmesh makes using webworkers take less... work
+* https://github.com/johnmn3/inmesh[inmesh] 0.1.0-alpha.2 - inmesh makes using webworkers take less... work
 * https://github.com/nathell/skyscraper[skyscraper] 0.3.2 - Structural scraping for the rest of us
 * https://github.com/babashka/neil[neil] 0.1.36 - A CLI to add common aliases and features to deps.edn-based projects
 * https://github.com/thheller/shadow-css[shadow-css] 0.3.0 - CSS-in-CLJ(S)
