--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,13 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.11.1.1155 (Aug 5, 2022) [[v1.11.1.1155]]
+
+* https://clojure.atlassian.net/browse/TDEPS-228[TDEPS-228] Add support for auto inferred Sourcehut git urls
+* Update aws-api, Maven, etc dep versions
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.14.1222
+
+
 === 1.11.1.1149 (Jun 21, 2022) [[v1.11.1.1149]]
 
 * `clj -Ttools install-latest` - refine how versions are filtered, sorted, and newest selected
