--- a/content/news/2022/08/19/deref.adoc
+++ b/content/news/2022/08/19/deref.adoc
@@ -9,6 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Podcasts and videos
 
+* https://ericnormand.me/podcast/high-level-language[What is a high-level language?] - Eric Normand
 * https://www.youtube.com/watch?v=0mrguRPgCzI[Create a URL shortner with Clojure and MySQL] - on the code again
 * https://www.youtube.com/watch?v=24GRiOCa1Vo[Data Rabbit - Alpha 1, Quick Intro / Overview (cljs-only version)] - Ryan Robitaille
 * https://www.youtube.com/watch?v=PwzucD5qoD4[Data Rabbit - nREPLs, SQL, JDBC, Viz (Nivo, Vega-lite), Sub-flows] - Ryan Robitaille
