--- a/content/community/tools.adoc
+++ b/content/community/tools.adoc
@@ -29,7 +29,7 @@ Community volunteers maintain <<xref/../../guides/getting_started#,Getting Start
 * https://neovim.io/[Neovim] with https://github.com/Olical/conjure[Conjure]
 * https://atom.io[Atom] with https://atom.io/packages/chlorine[Chlorine] - https://github.com/mauricioszabo/atom-chlorine[project]
 * http://www.lighttable.com/[Light Table]
-* https://www.sublimetext.com/[Sublime Text] with https://github.com/wuub/SublimeREPL[SublimeREPL]
+* https://www.sublimetext.com/[Sublime Text] with https://github.com/tonsky/Clojure-Sublimed[Clojure Sublimed] or https://tutkain.flowthing.me/[Tutkain]
 * https://doc.ccw-ide.org/[Eclipse Counterclockwise] (inactive)
 * https://sekao.net/nightcode/[Nightcode] (inactive)
 
