adding Redefine.io

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -369,6 +369,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Reaktor
 * Red Hat
 * Red Pineapple Media
+* Redefine.io
 * Reify Health
 * RentPath
 * Ride Health
