--- a/content/news/2022/09/16/deref.adoc
+++ b/content/news/2022/09/16/deref.adoc
@@ -32,7 +32,7 @@ And in the almost present, the Deref will be on "conference vacation" next week 
 * https://scicloj.github.io/blog/predict-real-vs.-fake-disaster-tweets/[Predict real vs. fake disaster tweets] - Carsten Behring
 * https://fbeyer.com/posts/refx-origins/[Refx: Origins] - Ferdinand Beyer
 * https://blog.stephcrown.com/how-to-set-up-a-clojure-script-and-phoenix-project[How to Set up A Clojure Script and Phoenix Project] - Stephen Emmanuel
-* https://radsmith.com/bbin[bbin: Install any Babashka script or project with one command] - 
+* https://radsmith.com/bbin[bbin: Install any Babashka script or project with one command] - Radford Smith
 * https://benjamin-asdf.github.io/faster-than-light-memes/binaural-beats-using-scittle.html[Binaural beats using scittle] - Benjamin
 
 == Libraries and Tools
